# computer_vision

./: .gitignore  pyproject.toml
Sam2/: sam2.ipynb
YOLO/: TODO.md  yolo.ipynb
YOLO/labels/0--Parade/: 0_Parade_Parade_0_102.txt  0_Parade_Parade_0_12.txt  0_Parade_Parade_0_120.txt  0_Parade_Parade_0_125.txt  0_Parade_Parade_0_164.txt  0_Parade_Parade_0_218.txt  0_Parade_Parade_0_239.txt  0_Parade_Parade_0_247.txt  0_Parade_Parade_0_266.txt  0_Parade_Parade_0_286.txt  0_Parade_Parade_0_288.txt  0_Parade_Parade_0_29.txt  0_Parade_Parade_0_317.txt  0_Parade_Parade_0_353.txt  0_Parade_Parade_0_376.txt  0_Parade_Parade_0_377.txt  0_Parade_Parade_0_43.txt  0_Parade_Parade_0_443.txt  0_Parade_Parade_0_470.txt  0_Parade_Parade_0_472.txt  0_Parade_Parade_0_478.txt  0_Parade_Parade_0_490.txt  0_Parade_Parade_0_502.txt  0_Parade_Parade_0_53.txt  0_Parade_Parade_0_611.txt  0_Parade_Parade_0_628.txt  0_Parade_Parade_0_639.txt  0_Parade_Parade_0_664.txt  0_Parade_Parade_0_68.txt  0_Parade_Parade_0_688.txt  0_Parade_Parade_0_72.txt  0_Parade_Parade_0_814.txt  0_Parade_Parade_0_850.txt  0_Parade_Parade_0_854.txt  0_Parade_Parade_0_917.txt  0_Parade_marchingband_1_104.txt  0_Parade_marchingband_1_1045.txt  (+28 more)
attention/: attention.ipynb  attentionV1.ipynb  attentionV2_mHC_RMSNorm.ipynb  attentionV3.ipynb  attentionV3_RoPE.ipynb  attentionV4_engram.ipynb  betterattention.ipynb  fix_notebook.py  notes.txt  tokenizer_src.json  tokenizer_tgt.json
attention/tokenizers/: kaggle_tokenizer_src.json  kaggle_tokenizer_tgt.json  tokenizer_src.json  tokenizer_tgt.json
(+2802 files in other folders)
