[project]
name = "computer-vision"
version = "0.1.0"
description = "practicing on important ML architectures"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "tokenizers>=0.22.2",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
]
